--- a/Auth- (Samy)/login-register.html
+++ b/Auth- (Samy)/login-register.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="auth.css">
+  <link rel="stylesheet" href="css/auth.css">
   <title>Login / Register</title>
 </head>
 
@@ -37,7 +37,7 @@
     </p>
   </form>
 
-  <script src="auth.js"></script>
+  <script src="js/auth.js"></script>
   <script>
     checkAlreadyLoggedIn()
   </script>
